--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -18,15 +18,19 @@
         <div class="row justify-content-md-center">
           <div class="col-md-5 bg-grey p-3">
             <form class="form-signin">
-                <h1 class="h3 mb-3">Sign in</h1>
-                <label for="inputEmail" class="sr-only">Email address</label>
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                <label for="inputPassword" class="sr-only">Password</label>
-                <input type="password" id="inputPassword" class="form-control mt-3" placeholder="Password" required>
+                <h1 class="h3 mb-3">Log in</h1>
+                <div class="form-outline mb-4">
+                    <input type="email" id="form2Example1" class="form-control" />
+                    <label class="form-label" for="form2Example1">Email address</label>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <input type="password" id="form2Example2" class="form-control" />
+                    <label class="form-label" for="form2Example2">Password</label>
+                  </div>
 
-                <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Sign in</button>
-                <a href="{% provider_login_url 'google' %}" class="btn btn btn-danger btn-lg btn-block" role="button" aria-pressed="true">Sign in with Google</a>
-              </form>
+                <button type="submit" class="btn btn-primary btn-block mb-4">Log In</button>
+                <a href="{% provider_login_url 'google' %}" class="btn btn btn-success btn-lg btn-block" role="button" aria-pressed="true">Sign in with Google</a> 
+            </form>
           </div>
         </div>
       </div>
